# agentic_executables

./: .cursorignore  .gitignore  CHANGELOG.md  README.md  firebase.json  install.sh  justfile
.github/workflows/: docs-deploy.yml  docs-quality.yml  release.yml
.serena/: project.yml
.tmp_apply_test_1772550987/: ae_install.md  ae_uninstall.md  ae_update.md  ae_use.md
.tmp_codex_generate/: ae_install.md  ae_uninstall.md  ae_update.md  ae_use.md
agentic_executables_cli/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
agentic_executables_cli/.dart_tool/: package_config.json  package_graph.json
agentic_executables_cli/lib/: agentic_executables_cli.dart
agentic_executables_cli/test/: artifact_command_test.dart  canonical_command_test.dart  canonical_distill_command_test.dart  codex_engine_test.dart  (+20 more)
agentic_executables_core/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
agentic_executables_mcp/: CHANGELOG.md  README.md  ae_install.md  pubspec.yaml
docs/: ae_e2e_evaluate.json  ae_e2e_just_migration.md  ae_e2e_log.md  ae_e2e_verify.json  ae_know_design.md  ae_know_extract_implement.md  ae_know_roadmap.md  architecture_diagram.md  e2e_know_sources.yaml  error_code_playbook.md  inference_provider_guide.md  lythe_real_registry_ae.md
docs_site/: .gitignore  README.md  package-lock.json  package.json
experiments/ae_rust_contract/ae_cli_stub/: Cargo.toml
experiments/ae_rust_contract/ae_cli_stub/src/: main.rs
prompts_framework/: ae_bootstrap.md
scripts/: ae_e2e_local_hub.sh  build_release_artifacts.sh  installer_smoke_test.sh  sync_core_prompts.sh
(+287 files in other folders)
